--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,24 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.0.0",
+    "@circle-fin/user-controlled-wallets": "^3.0.0",
+    "@circle-fin/w3s-pw-web-sdk": "^1.0.10",
+    "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "^5.10.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@tanstack/react-query": "^5.29.2",
+    "cmdk": "^1.0.0",
+    "next-auth": "^5.0.0-beta.5",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.5",
+    "zustand": "^4.5.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -27,7 +45,7 @@
     "clsx": "^1.2.1",
     "ethers": "^6.13.2",
     "lucide-react": "0.105.0-alpha.4",
-    "next": "^13.4.8",
+    "next": "^14.2.2",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -45,6 +63,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@typescript-eslint/parser": "^5.61.0",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.44.0",
     "eslint-config-next": "13.0.0",
@@ -52,8 +71,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.24",
+    "prisma": "^5.12.1",
     "prettier": "^2.8.8",
     "tailwindcss": "^3.3.2",
-    "typescript": "^4.9.5"
+    "typescript": "^5"
   }
 }
