--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,43 +19,46 @@
     "@circle-fin/w3s-pw-web-sdk": "^1.0.10",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "^5.10.2",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-scroll-area": "^1.0.5",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.29.2",
-    "cmdk": "^1.0.0",
-    "next-auth": "^5.0.0-beta.5",
-    "react-hook-form": "^7.51.3",
-    "react-hot-toast": "^2.4.1",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.5",
-    "zustand": "^4.5.2",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@react-three/drei": "^9.114.3",
+    "@react-three/fiber": "^8.17.10",
+    "@tanstack/react-query": "^5.29.2",
     "@thirdweb-dev/react": "^4.9.4",
     "chart.js": "^4.4.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "cmdk": "^1.0.0",
     "ethers": "^6.13.2",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^14.2.2",
+    "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.3",
+    "react-hot-toast": "^2.4.1",
     "recharts": "^2.12.7",
     "sharp": "^0.31.3",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
     "thirdweb": "^5.49.0",
-    "vaul": "^0.9.1"
+    "three": "^0.169.0",
+    "uuid": "^9.0.1",
+    "vaul": "^0.9.1",
+    "zod": "^3.22.5",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^3.7.2",
