--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "next": "^14.2.2",
     "next-auth": "^5.0.0-beta.5",
     "next-themes": "^0.2.1",
+    "pino-pretty": "^11.2.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
