--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "clsx": "^1.2.1",
     "cmdk": "^1.0.0",
     "ethers": "^6.13.2",
+    "framer-motion": "^11.11.8",
     "lucide-react": "0.105.0-alpha.4",
     "next": "^14.2.2",
     "next-auth": "^5.0.0-beta.5",
